# bread-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mingw.cmake
include/: bread.hpp  typedeclarations.hpp  windows_wrapper.h
include/components/: script.hpp  sprite.hpp  transform.hpp
include/core/: components.hpp  context.hpp  entities.hpp  internal_api.hpp  slotmap.hpp  system.hpp  type_traits.hpp  utils.hpp
include/system/: datastore.hpp  render.hpp  scripting.hpp
libs/glad/: CMakeLists.txt
libs/glad/include/: glad.h
libs/glad/src/: glad.c
libs/glfw/docs/: Doxyfile.in
libs/nlohmann_json/: nlohmann
libs/stb/: CMakeLists.txt
src/components/: script.cpp  sprite.cpp  transform.cpp
src/core/: components.cpp  context.cpp
src/system/: render.cpp  scripting.cpp
